update: graphql, sandbox

--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -13,7 +13,7 @@
             }
         </script>
     </head>
-    <body>
+    <body class="bg-white dark:bg-neutral-900">
         <div id="app" class="bg-white dark:bg-neutral-900"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
